# nbody-cuda

./: CMakeLists.txt  config.cpp  config.hpp  nbody.cu  params.cpp  params.hpp  params.txt  rng.cu  run  status.cpp  status.hpp
data/: XYZ.txt  gnuplot-nbody-commands.txt
data/data-0/: params.txt
plot/: 3d.plot.txt  I-R-t.plot.txt  I.plot.txt  calc-I-R-t.c  calc-dN-R-t.c  dI.plot.txt  dN-R-t.plot.txt  e.plot.txt
test/: params-test-1.txt  test-main.cpp  test-params.cpp  test-status.cpp
